--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "FSEC MUSIC",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://graph.org/file/cb9394eec3d0ebce858f9.jpg",
+    "logo": "https://files.catbox.moe/hm68sz.jpg",
     "keywords": [
         "python3",
         "telegram",
