--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ gpytranslate
 gtts
 hachoir
 heroku3
-httpx
+httpx==0.27.2
 img2pdf
 instaloader
 lexica-api
@@ -39,7 +39,7 @@ pycryptodome
 pydub
 pyfiglet
 pykeyboard
-git+https://github.com/doraemon890/pyrogram
+git+https://github.com/yt-dlp/yt-dlp.git
 python-dotenv
 python-telegram-bot
 python-whois
